--- a/modules/configuracoes.html
+++ b/modules/configuracoes.html
@@ -12,14 +12,12 @@
       --cinza-claro: #f9f9f9;
       --cinza-borda: #ccc;
     }
-
     body {
       font-family: Arial, sans-serif;
       background: var(--cinza-claro);
       margin: 0;
       padding: 0;
     }
-
     .topbar {
       width: 100%;
       height: 60px;
@@ -34,30 +32,25 @@
       left: 0;
       z-index: 100;
     }
-
     .topbar .logo {
       display: flex;
       align-items: center;
       gap: 10px;
       cursor: pointer;
     }
-
     .topbar .logo img {
       height: 50px;
     }
-
     .topbar .user-menu {
       position: relative;
       cursor: pointer;
       margin-right: 3rem;
     }
-
     .topbar .user-name {
       display: flex;
       align-items: center;
       gap: 10px;
       color: var(--rosa);
-      font-family: Arial, sans-serif;
       font-size: 1rem;
       font-weight: bold;
       max-width: 250px;
@@ -65,7 +58,6 @@
       overflow: hidden;
       text-overflow: ellipsis;
     }
-
     .user-dropdown {
       display: none;
       position: absolute;
@@ -78,18 +70,15 @@
       min-width: 180px;
       z-index: 1000;
     }
-
     .user-dropdown a {
       display: block;
       padding: 10px;
       text-decoration: none;
       color: black;
     }
-
     .user-dropdown a:hover {
       background-color: #eee;
     }
-
     .container {
       max-width: 700px;
       margin: 100px auto 0;
@@ -98,18 +87,15 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       padding: 2rem;
     }
-
     h2 {
       color: var(--azul);
       margin-bottom: 1.5rem;
     }
-
     .option-box {
       display: flex;
       flex-direction: column;
       gap: 1rem;
     }
-
     .option-box a {
       text-decoration: none;
       background-color: var(--azul);
@@ -120,7 +106,6 @@
       text-align: center;
       transition: background 0.3s ease;
     }
-
     .option-box a:hover {
       background-color: #2fa3e6;
     }
@@ -144,6 +129,7 @@
     <div class="user-menu" onclick="toggleMenu()">
       <div class="user-name">
         <img src="logo_usuario_rosa.png" alt="Usuário" width="28">
+        <!-- Default antes do carregamento -->
         <span id="nome-usuario"><strong>Carregando...</strong></span>
       </div>
       <div class="user-dropdown" id="dropdown">
@@ -162,17 +148,22 @@
   </div>
 
   <script>
-    const spanNome = document.getElementById("nome-usuario");
-    const nomeLocal = localStorage.getItem("nome_usuario");
-    if (spanNome && nomeLocal) {
-      spanNome.innerHTML = `<strong>${nomeLocal}</strong>`;
-    }
+    // Aguarda o HTML estar carregado antes de buscar no localStorage
+    document.addEventListener('DOMContentLoaded', function() {
+      const spanNome  = document.getElementById("nome-usuario");
+      const nomeLocal = localStorage.getItem("nome_usuario");
+      if (spanNome && nomeLocal) {
+        spanNome.innerHTML = `<strong>${nomeLocal}</strong>`;
+      }
+    });
 
+    // Abre/fecha o dropdown do usuário
     function toggleMenu() {
       const dropdown = document.getElementById("dropdown");
       dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
     }
 
+    // Limpa dados e volta para a tela de login
     function logout() {
       localStorage.removeItem("token");
       localStorage.removeItem("nivel");
@@ -181,6 +172,7 @@
       window.location.href = "index.html";
     }
 
+    // Fecha o dropdown se clicar fora
     document.addEventListener("click", function (event) {
       const dropdown = document.getElementById("dropdown");
       const userMenu = document.querySelector(".user-menu");
