--- a/infosys_dashboard.html
+++ b/infosys_dashboard.html
@@ -115,34 +115,38 @@
   </style>
 </head>
 <body>
-  <!-- Segurança: redireciona se não autenticado -->
+  <!-- Segurança: redireciona para login se não autenticado -->
   <script>
     (function() {
       const token = localStorage.getItem('token');
-      if (location.protocol !== 'file:' && !location.pathname.endsWith('index.html') && !token) {
+      if (
+        location.protocol !== 'file:' &&
+        !location.pathname.endsWith('index.html') &&
+        !token
+      ) {
         window.location.href = 'index.html';
       }
     })();
   </script>
 
-  <!-- Topbar -->
+  <!-- Topbar única -->
   <div class="topbar">
     <div class="logo" onclick="window.location.href='infosys_dashboard.html'">
       <img src="Horizontal-Branco-SemFundo.png" alt="Idealize Logo">
     </div>
-    <div class="user-menu" id="user-menu">
+    <div class="user-menu" onclick="toggleMenu()">
       <div class="user-name">
         <img src="logo_usuario_rosa.png" alt="Usuário" width="28">
         <span id="nome-usuario"><strong>Carregando...</strong></span>
       </div>
       <div class="user-dropdown" id="dropdown">
         <a href="gerenciar_conta.html">Gerenciar conta</a>
-        <a href="#" id="logout-btn">Sair</a>
+        <a href="#" onclick="logout()">Sair</a>
       </div>
     </div>
   </div>
 
-  <!-- Sidebar -->
+  <!-- Sidebar com módulos -->
   <aside class="sidebar">
     <div class="sidebar-divider"></div>
     <a href="#" data-module="modules/fechamento_caixa.html"><i class="fas fa-cash-register"></i><span>Fechamento de Caixa</span></a>
@@ -153,7 +157,7 @@
     <a href="#" data-module="modules/configuracoes.html"><i class="fas fa-cogs"></i><span>Configurações</span></a>
   </aside>
 
-  <!-- Conteúdo -->
+  <!-- Conteúdo principal -->
   <div class="main" id="app">
     <div style="font-style: italic; color: var(--cinza-escuro);">
       Selecione uma opção na barra lateral.
@@ -163,50 +167,41 @@
   <script>
     const URL_API = 'https://script.google.com/macros/s/AKfycbzC8tQ3bTO2a69FyImqQu5WLF8Nj_y0xWzQ6oRURB1WlVHWX_bTVX-ENwvCBstEYsxE/exec';
 
+    // Verifica autenticação
     function checkAuth() {
       if (!localStorage.getItem('token')) window.location.href = 'index.html';
     }
 
+    // Carrega e atualiza nome do usuário
     function initNomeUsuario() {
       const nomeCache = localStorage.getItem('nome_usuario') || '';
-      document.querySelectorAll('#nome-usuario').forEach(el => el.innerHTML = nomeCache ? `<strong>${nomeCache}</strong>` : `<strong>Carregando...</strong>`);
-      const token = localStorage.getItem('token');
-      if (!token) return;
-      fetch(URL_API, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-        body: new URLSearchParams({ action: 'usuario', token })
-      })
-      .then(r => r.text())
-      .then(txt => {
-        if (txt.startsWith('{')) {
-          const data = JSON.parse(txt);
-          const nome = (data.nome || data.email).trim();
-          document.querySelectorAll('#nome-usuario').forEach(el => el.innerHTML = `<strong>${nome}</strong>`);
-          localStorage.setItem('nome_usuario', nome);
-        }
-      })
-      .catch(console.error);
+      document.querySelectorAll('#nome-usuario').forEach(el => {
+        el.innerHTML = nomeCache ? `<strong>${nomeCache}</strong>` : `<strong>Carregando...</strong>`;
+      });
     }
 
+    // Abre/fecha dropdown de usuário
     function toggleMenu() {
       const dd = document.getElementById('dropdown');
       dd.style.display = dd.style.display === 'block' ? 'none' : 'block';
     }
 
-    document.getElementById('user-menu').addEventListener('click', toggleMenu);
-    document.getElementById('logout-btn').addEventListener('click', e => {
-      e.preventDefault();
+    // Logout
+    function logout() {
       localStorage.clear();
       window.location.href = 'index.html';
-    });
+    }
 
-    document.addEventListener('click', e => {
-      if (!document.getElementById('user-menu').contains(e.target)) {
-        document.getElementById('dropdown').style.display = 'none';
+    // Fecha dropdown ao clicar fora
+    document.addEventListener('click', event => {
+      const dropdown = document.getElementById('dropdown');
+      const userMenu = document.querySelector('.user-menu');
+      if (!userMenu.contains(event.target)) {
+        dropdown.style.display = 'none';
       }
     });
 
+    // Carrega módulo e reinicia nome
     document.querySelectorAll('.sidebar a[data-module]').forEach(link => {
       link.addEventListener('click', e => {
         e.preventDefault();
@@ -214,16 +209,14 @@
         fetch(link.getAttribute('data-module'))
           .then(r => r.text())
           .then(html => {
-            const parser = new DOMParser();
-            const doc = parser.parseFromString(html, 'text/html');
-            const body = doc.querySelector('body');
-            document.getElementById('app').innerHTML = body ? body.innerHTML : html;
+            document.getElementById('app').innerHTML = html;
             initNomeUsuario();
           })
           .catch(console.error);
       });
     });
 
+    // Inicialização ao carregar
     window.addEventListener('load', () => {
       checkAuth();
       initNomeUsuario();
