--- a/pages/app/usuarios.html
+++ b/pages/app/usuarios.html
@@ -6,10 +6,10 @@
   <title>Usuários – InfoSys</title>
 
   <!-- Segurança -->
-  <script src="/js/seguranca.js" defer></script>
-  <script src="/js/inatividade.js" defer></script>
+  <script src="../../js/seguranca.js" defer></script>
+  <script src="../../js/inatividade.js" defer></script>
 
-  <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+  <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
 
   <meta http-equiv="Content-Security-Policy"
         content="
@@ -23,11 +23,13 @@
                       https://api.ipify.org;
         ">
 
-  <link rel="stylesheet" href="/css/header.css" />
-  <script src="/js/header.js" defer></script>
+  <!-- Estilos e scripts -->
+  <link rel="stylesheet" href="../../css/header.css" />
+  <script src="../../js/header.js" defer></script>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="/css/usuarios.css" />
-  <script type="module" src="/js/usuarios.js" defer></script>
+  <link rel="stylesheet" href="../../css/usuarios.css" />
+  <script type="module" src="../../js/usuarios.js" defer></script>
 </head>
 <body>
   <div id="site-header"></div>
