--- a/pages/public/alterar-senha.html
+++ b/pages/public/alterar-senha.html
@@ -6,9 +6,9 @@
   <title>Trocar senha – InfoSys</title>
 
   <!-- Segurança: redireciona se não autenticado direciona para index.html -->
-  <script src="/js/seguranca.js" defer></script>
-  
-    <!-- Content Security Policy -->
+  <script src="../../js/seguranca.js" defer></script>
+
+  <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy"
         content="
           default-src 'self';
@@ -21,8 +21,8 @@
                       https://api.ipify.org;
         ">
 
-  <link rel="icon" type="image/png" href="../assets/images/favicon.png" />
-  <link rel="stylesheet" href="/css/alterar-senha.css" />
+  <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
+  <link rel="stylesheet" href="../../css/alterar-senha.css" />
 </head>
 <body>
   <div class="card">
@@ -67,6 +67,6 @@
     </form>
   </div>
 
-  <script type="module" src="/js/alterar-senha.js"></script>
+  <script type="module" src="../../js/alterar-senha.js"></script>
 </body>
 </html>
