--- a/pages/app/infosys-dashboard.html
+++ b/pages/app/infosys-dashboard.html
@@ -6,17 +6,17 @@
   <title>InfoSys – Dashboard</title>
 
   <!-- Segurança: redireciona se não autenticado direciona para index.html -->
-  <script src="/js/seguranca.js" defer></script>
+  <script src="../../js/seguranca.js" defer></script>
 
   <!-- monitoramento de inatividade -->
-  <script src="/js/inatividade.js" defer></script>
+  <script src="../../js/inatividade.js" defer></script>
 
   <!-- favicon -->
-  <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+  <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
 
   <!-- HEADER PADRÃO -->
-  <link rel="stylesheet" href="/css/header.css" />
-  <script src="/js/header.js" defer></script>
+  <link rel="stylesheet" href="../../css/header.css" />
+  <script src="../../js/header.js" defer></script>
   <!-- /HEADER -->
 
   <!-- Font Awesome (ícones) -->
@@ -26,18 +26,17 @@
   />
 
   <!-- SIDEBAR PADRÃO -->
-  <link rel="stylesheet" href="/css/sidebar.css" />
-  <script src="/js/sidebar.js" defer></script>
+  <link rel="stylesheet" href="../../css/sidebar.css" />
+  <script src="../../js/sidebar.js" defer></script>
   <!-- /SIDEBAR -->
 
   <!-- CSS específico da Dashboard -->
-  <link rel="stylesheet" href="/css/infosys-dashboard.css" />
+  <link rel="stylesheet" href="../../css/infosys-dashboard.css" />
 
   <!-- JS específico da Dashboard -->
-  <script type="module" src="/js/infosys-dashboard.js" defer></script>
+  <script type="module" src="../../js/infosys-dashboard.js" defer></script>
 </head>
 <body>
-  
   <!-- aqui o header padrão será injetado -->
   <div id="site-header"></div>
 
